--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,9 @@ python-multipart
 "passlib[bcrypt]"
 alembic
 websockets
-python-multipart
 aio_pika
 aiosmtplib
+redis
+httpx
+pytest
+pytest-asyncio
