--- a/.github/workflows/tests_on_push.yaml
+++ b/.github/workflows/tests_on_push.yaml
@@ -18,6 +18,17 @@ jobs:
           - '5432:5432'
         options: '--health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5'
 
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: Qewads
+          POSTGRES_DB: test_remanga_fastapi
+        ports:
+          - '5432:5432'
+        options: '--health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5'
+
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
