--- a/.github/workflows/tests_on_push.yaml
+++ b/.github/workflows/tests_on_push.yaml
@@ -18,8 +18,7 @@ jobs:
           - '5432:5432'
         options: '--health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5'
 
-    services:
-      postgres:
+      test_postgres:
         image: postgres:15
         env:
           POSTGRES_USER: postgres
