--- a/.github/workflows/tests_on_push.yaml
+++ b/.github/workflows/tests_on_push.yaml
@@ -10,11 +10,13 @@ jobs:
     services:
       db:
         image: postgres:alpine
-        env_file:
-          - .env_docker
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: db
         ports:
-          - '5432:5432'
-        options: '--health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5'
+          - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
       db_test:
         image: postgres:alpine
@@ -23,13 +25,13 @@ jobs:
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: db_test
         ports:
-          - '5433:5432'
-        options: '--health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5'
+          - 5433:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
       web:
         build: .
         ports:
-          - '8000:8000'
+          - 8000:8000
         env_file:
           - .env_docker
         depends_on:
