--- a/.env
+++ b/.env
@@ -5,7 +5,8 @@ DB_USER=postgres
 DB_PASS=Qewads
 
 DB_HOST_TEST=localhost
-DB_PORT_TEST=5432
+DB_PORT_TEST=5433
+# DB_PORT_TEST=5432
 DB_NAME_TEST=test_remanga_fastapi
 DB_USER_TEST=postgres
 DB_PASS_TEST=Qewads
