--- a/.github/workflows/tests_on_push.yaml
+++ b/.github/workflows/tests_on_push.yaml
@@ -28,16 +28,6 @@ jobs:
           - 5433:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
-      # web:
-      #   build: .
-      #   ports:
-      #     - 8000:8000
-      #   env_file:
-      #     - .env_docker
-      #   depends_on:
-      #     - db
-      #     - db_test
-
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
@@ -48,10 +38,10 @@ jobs:
       - name: Install requirements
         run: pip install -r requirements.txt
 
-      # - name: Build and test
-      #   run: |
-      #     docker build -t web .
-      #     docker run -d -p 8000:8000 --env-file .env_docker --name remanga --network host web
+      - name: Create database tables
+        run: |
+          cd remanga_fastapi
+          alembic upgrade head
 
       - name: Tests
         run: pytest
