--- a/.github/workflows/tests_on_push.yaml
+++ b/.github/workflows/tests_on_push.yaml
@@ -38,9 +38,14 @@ jobs:
       - name: Install requirements
         run: pip install -r requirements.txt
 
-      - name: Create database tables
+      - name: Create test database tables
         run: |
           cd remanga_fastapi
+          alembic upgrade head
+      
+      - name: Create main database tables
+        run: |
+          sed -i 's/DATABASE_URL_TEST/DATABASE_URL/g' migrations/env.py
           alembic upgrade head
 
       - name: Tests
