--- a/.github/workflows/tests_on_push.yaml
+++ b/.github/workflows/tests_on_push.yaml
@@ -7,26 +7,26 @@ jobs:
   test:
     runs-on: ubuntu-latest
     
-    # services:
-    #   db:
-    #     image: postgres:alpine
-    #     env:
-    #       POSTGRES_USER: postgres
-    #       POSTGRES_PASSWORD: Qewads
-    #       POSTGRES_DB: remanga_fastapi
-    #     ports:
-    #       - 5432:5432
-    #     options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+    services:
+      db:
+        image: postgres:alpine
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: Qewads
+          POSTGRES_DB: remanga_fastapi
+        ports:
+          - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
-    #   db_test:
-    #     image: postgres:alpine
-    #     env:
-    #       POSTGRES_USER: postgres
-    #       POSTGRES_PASSWORD: Qewads
-    #       POSTGRES_DB: test_remanga_fastapi
-    #     ports:
-    #       - 5433:5432
-    #     options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+      db_test:
+        image: postgres:alpine
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: Qewads
+          POSTGRES_DB: test_remanga_fastapi
+        ports:
+          - 5433:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
       - uses: actions/checkout@v2
@@ -53,47 +53,3 @@ jobs:
       - name: Tests
         run: pytest
         working-directory: remanga_fastapi/tests
-
-# name: CI
-# on:
-#   push:
-#     branches:
-#       - main
-# jobs:
-#   test:
-#     runs-on: ubuntu-latest
-    
-#     services:
-#       postgres:
-#         image: postgres:15
-#         env:
-#           POSTGRES_USER: postgres
-#           POSTGRES_PASSWORD: postgres
-#           POSTGRES_DB: # вместо remanga_fastapi название сервиса postgres
-#         ports:
-#           - '5432:5432'
-#         options: '--health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5'
-
-#       test_postgres:
-#         image: postgres:15
-#         env:
-#           POSTGRES_USER: postgres
-#           POSTGRES_PASSWORD: postgres
-#           POSTGRES_DB: # test_remanga_fastapi test_postgres
-#         ports:
-#           - '5433:5432'
-#         options: '--health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5'
-
-#     steps:
-#       - uses: actions/checkout@v2
-#       - uses: actions/setup-python@v2
-#         with:
-#           python-version: 3.9
-#           architecture: x64
-
-#       - name: Install requirements
-#         run: pip install -r requirements.txt
-
-#       - name: Tests
-#         run: pytest
-#         working-directory: remanga_fastapi/tests
