--- a/.env
+++ b/.env
@@ -16,5 +16,5 @@ REDIS_PORT=6379
 
 RABBITMQ_HOST=localhost
 
-SMTP_USER=fawwa2515af@outlook.com
-SMTP_PASSWORD=fGJsS(Q.PP#95r#
+SMTP_USER=
+SMTP_PASSWORD=
