--- a/.env_docker
+++ b/.env_docker
@@ -19,5 +19,5 @@ REDIS_PORT=6379
 
 RABBITMQ_HOST=rabbitmq
 
-SMTP_USER=fawwa2515af@outlook.com
-SMTP_PASSWORD=fGJsS(Q.PP#95r#
+SMTP_USER=
+SMTP_PASSWORD=
